feat: Implement Stripe payments, fork onboarding flow, and redesign pricing UI

--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.91.0",
     "@types/cheerio": "^0.22.35",
+    "@vercel/og": "^0.8.6",
     "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.27.4",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.530",
     "query-string": "^9.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "resend": "^6.8.0",
+    "satori": "^0.19.1",
     "stripe": "^20.2.0",
     "twitter-api-v2": "^1.29.0"
   },
